--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 homework/data/application_train.csv
 homework/data/house_train.csv.gz
+homework/data/titanic_test.csv
+homework/data/titanic_train.csv
