--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ homework/data/application_train.csv
 homework/data/house_train.csv.gz
 homework/data/titanic_test.csv
 homework/data/titanic_train.csv
+homework/data/application_test.csv
+homework/result/D21_practice.csv
