--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ homework/data/titanic_test.csv
 homework/data/titanic_train.csv
 homework/data/application_test.csv
 homework/result/D21_practice.csv
+homework/midterm/result
