--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,4 @@
 
-homework/data/application_train.csv
-homework/data/house_train.csv.gz
-homework/data/titanic_test.csv
-homework/data/titanic_train.csv
-homework/data/application_test.csv
+homework/data
 homework/result/D21_practice.csv
 homework/midterm/result
