--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ homework/data
 homework/result/D21_practice.csv
 homework/midterm/result
 homework/D48-Kaggle練習/data
+homework/result/D49_titanic_blending.csv
+homework/result/D49_titanic_gdbt.csv
+homework/result/D49_titanic_lr.csv
+homework/result/D49_titanic_rf.csv
