--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ homework/result/D50_titanic_gdbt.csv
 homework/result/D50_titanic_lr.csv
 homework/result/D50_titanic_rf.csv
 homework/result/D50_titanic_stacking.csv
+homework/final
